# vali-rofs

./: .gitignore  CMakeLists.txt  LIBRARY_ARCHITECTURE.md  README.md  VAFS_FORMAT_SPEC.md
.github/workflows/: ci.yml
benchmarks/: BENCHMARK_BASELINE.md  CMakeLists.txt  HOTSPOT_REPORT.md  README.md  benchmark.c  benchmark.h  filter.c  filter.h  generate_test_data.sh  vafs_bench.c
chef/: vafs.yaml
filters/: CMakeLists.txt
filters/aplib/: CMakeLists.txt
filters/brieflz/: CMakeLists.txt
libvafs/: CMakeLists.txt  config.c  crc.c  crc.h  directory.c  file.c  log.c  private.h  stream.c  streamdevice.c  symlink.c  utils.c  vafs.c
libvafs/blockcache/: CMakeLists.txt  cache.c  cache.h  hashtable.h
libvafs/cache/: CMakeLists.txt  blockcache.c  blockcache.h  hashtable.c  hashtable.h
libvafs/include/vafs/: directory.h  file.h  platform.h  stat.h  symlink.h  vafs.h  vafs_platform.h
tests/: CMakeLists.txt  README.md  generate_large_file_image.sh  generate_many_small_files_image.sh  generate_medium_rootfs_image.sh  generate_symlink_heavy_image.sh  generate_tiny_image.sh  generate_wide_directory_image.sh  test_harness.sh  test_malformed.c  test_malformed.sh  test_symlinks.c
tests/fuzz/: CMakeLists.txt  README.md  fuzz_directory_traversal.c  fuzz_file_operations.c  fuzz_image_open.c  fuzz_symlink_resolution.c  generate_corpus.sh
tests/fuzz/cases/: seed_bad_magic.vafs  seed_bad_version.vafs  seed_excessive_dir_count.vafs  seed_invalid_root_index.vafs  seed_minimal.vafs  seed_offset_collision.vafs
tests/fuzz/corpus/: seed_excessive_features.vafs  seed_truncated.vafs
tests/lib/: README.md  github-ci.sh
tests/test_malformed_output/images/: test_descriptor_too_long.vafs  test_descriptor_too_short.vafs  test_directory_excessive_count.vafs  test_file_no_name.vafs  test_symlink_excessive_length.vafs  test_symlink_length_mismatch.vafs  test_symlink_zero_length.vafs
tests/unit/: CMakeLists.txt  README.md  run_regression_tests.sh  test_common.h  test_header_validation.c  test_malformed.sh  test_regression.c
tools/: CMakeLists.txt  dirent_win32.h  filter.c  mkvafs.c  ntifs_win32.h  unmkvafs.c  vafs.c
tools/utils/: getfiles.c  list.h  platform.h  strfilter.c  utils.h
